--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "vue-progressbar": "^0.7.5",
         "vue-resource": "^1.5.1",
         "vue-router": "^3.4.6",
-        "vuetify": "^2.3.13"
+        "vuetify": "^2.3.13",
+        "vuex": "^3.5.1"
     }
 }
